# vcpkg-cross-compiling

./: README.md
host-compile-tools/port/: portfile.cmake  vcpkg.json
host-compile-tools/src/: CMakeLists.txt  PackAsGltf.cpp
